wrapping done all bugs fixed

--- a/style.css
+++ b/style.css
@@ -106,10 +106,9 @@ button{
 
 .b_display{
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
-    gap: 2rem;
-    padding: 2rem;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 1.3rem;
 }
 
 .card{
